--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,1 @@
-<div class="w-screen h-screen items-center flex">
-  <div class="flex flex-col m-auto gap-10">
-    <img src="logo1.png" class="h-52 m-auto" />
-    <app-button class="m-auto" label="Logg inn" />
-  </div>
-</div>
+<p>home works!</p>
