--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,6 +1,6 @@
 <button
   (click)="triggerCallback()"
-  class="m-auto rounded-lg bg-secondaryBlue px-8 py-2 font-bold text-primaryBlue"
+  class="m-auto w-full rounded-lg bg-secondaryBlue px-8 py-5 font-bold text-primaryBlue"
 >
   {{ label() }}
 </button>
