--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div
+  class="m-auto mt-12 flex h-[calc(100vh-220px)] w-52 flex-col justify-between"
+>
+  <div class="flex w-full flex-col gap-10">
+    @for (link of links(); track $index) {
+      <app-button [label]="link.label" (clb)="goToRoute(link.route)" />
+    }
+  </div>
+  <div>
+    <app-button label="Logg ut" />
+  </div>
+</div>
