--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <img
     src="logo.png"
     alt="Logo"
-    class="m-auto mt-12 h-20"
-    [routerLink]="'/home'"
+    class="m-auto mt-12 h-20 cursor-pointer"
+    routerLink="/home"
   />
 }
 <router-outlet />
